# LzyTools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-composite-error.txt  task-1-deps-install.txt  task-1-existing-tests.txt  task-1-red-phase.txt  task-1-strategy-check.txt  task-2-config-import.txt  task-2-exceptions.txt  task-2-from-address.txt  task-2-red-phase.txt  task-2-test-collection.txt  task-3-model-tests.txt  task-3-timeout-pass.txt  task-4-ctx-green.txt  task-4-pool-stats.txt  task-4-sender-tests.txt  task-5-batch-basic.txt  task-5-dryrun-tests.txt  task-5-log-injection.txt  task-6-propagation.txt  task-6-taskgroup-basic.txt  task-6-template-tests.txt  task-7-all-tests.txt  task-7-full-import.txt  task-7-green-phase.txt  task-7-init-docstring.txt  task-7-middleware.txt  task-7-no-regressions.txt  task-7-readme-complete.txt  task-8-readme.txt  task-9-docstring.txt
.sisyphus/plans/: basic-tool-crypto.md  basic-tool-errors.md  concurrency-module.md  context-module.md  email-module.md  id-generator-module.md  metrics-module.md  storage-module.md  trace-context-integration.md
basic_tool/: __init__.py
basic_tool/.sisyphus/: boulder.json
basic_tool/concurrency/: README.md  __init__.py  batch.py  config.py  exceptions.py  pool.py  strategy.py  task_group.py  timeout.py
basic_tool/context/: README.md  __init__.py  ctx.py  log_extra.py  middleware.py  propagation.py
basic_tool/crypto/: README.md  __init__.py  config.py  encrypt.py  exceptions.py  kdf.py  password.py  sign.py
basic_tool/email/: README.md  (+8 more)
tests/: conftest.py
(+207 files in other folders)
