[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-tool"
version = "0.2.0"
description = "Infrastructure base library for LzyProjs"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0.0",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis[lua]>=2.23.0",
]

[tool.setuptools.packages.find]
include = ["basic_tool*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
